register button not showing on smaller phones fixed

--- a/css/app.css
+++ b/css/app.css
@@ -250,6 +250,8 @@ countdown
     }
     #hero-text-padding {
         padding-top: 40%;
+        position: absolute;
+        bottom: 5%;
     }
     .hero p {
         text-align: center;
